slashes are deleted

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="/fonts/Roboto-Black.ttf">
-    <link href="/fonts/Roboto-Bold.ttf">
-    <link rel="stylesheet" href="/css/style.css">
-    <!-- <link rel="stylesheet" href="/css/reset.css"> -->
+    <title>Denzel Washington</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    <header class="header">
@@ -28,7 +25,7 @@
                     <br> 30 years old
                     </h5>
                </div>
-               <img src="/img/denzel.jpg" alt="">
+               <img src="img/denzel.jpg" alt="">
            </div>
            <div class="about">
                <h2>About me</h2>
@@ -50,71 +47,71 @@
                <h5>I work in such programs as</h5>
                <div class="programmes">
                    <div class="programme">
-                        <img src="/img/programmes/photoshop.svg" alt="photoshop">
+                        <img src="img/programmes/photoshop.svg" alt="photoshop">
                         <p>
                             Adobe
                             Photoshop
                         </p>
                        <div class="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star0.jpg" alt="star0">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star0.jpg" alt="star0">
                        </div>
                     </div>
                     <div class="programme">
-                        <img src="/img/programmes/illustrator.svg" alt="illustrator">
+                        <img src="img/programmes/illustrator.svg" alt="illustrator">
                         <p>
                             Adobe 
                             Illustrator
                        </p>
                        <div class="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star0.jpg" alt="star0">
-                           <img src="/img/stars/Star0.jpg" alt="star0">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star0.jpg" alt="star0">
+                           <img src="img/stars/Star0.jpg" alt="star0">
                        </div>
 
                     </div>
                     <div class="programme">
-                        <img src="/img/programmes/effects.png" alt="effects">
+                        <img src="img/programmes/effects.png" alt="effects">
                         <p>
                             Adobe 
                             After Effects
                        </p>
                        <div class="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star0.jpg" alt="star0">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star0.jpg" alt="star0">
                        </div>
 
                     </div>
                     <div class="programme">
-                        <img src="/img/programmes/Group.jpg" alt="group">
+                        <img src="img/programmes/Group.jpg" alt="group">
                         <p>
                             Figma
                        </p>
                        <div class="star1">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star1.jpg" alt="star">
-                           <img src="/img/stars/Star0.jpg" alt="star0">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star1.jpg" alt="star">
+                           <img src="img/stars/Star0.jpg" alt="star0">
                        </div>
 
                     </div>
            </div>
            <div class="portfolio">
                <h2>Portfolio</h2>
-               <img src="/img/portfolio.jpg" alt="portfolio">
+               <img src="img/portfolio.jpg" alt="portfolio">
                <h5>Online fashion store - Homepage</h5>
-               <img src="/img/homepage.jpg" alt="homepage">
+               <img src="img/homepage.jpg" alt="homepage">
                <h5>Reebok Store - Concept</h5>
-               <img src="/img/reebok_web.jpg" alt="reebok_web">
+               <img src="img/reebok_web.jpg" alt="reebok_web">
                <h5>Braun Landing Page - Concept</h5>
            </div>
        </div>
@@ -131,10 +128,10 @@
         </div>
        </div>
        <div class="links">
-           <a href="#" class="social-link"><img src="/img/links/Group 2.png" alt="In"></a>
-           <a href="#" class="social-link"><img src="/img/links/instagram.png" alt="instagram"></a>
-           <a href="#" class="social-link"><img src="/img/links/behance.png" alt="behance"></a>
-           <a href="#" class="social-link"><img src="/img/links/Group 10.png" alt="Group 10"></a>
+           <a href="#" class="social-link"><img src="img/links/Group 2.png" alt="In"></a>
+           <a href="#" class="social-link"><img src="img/links/instagram.png" alt="instagram"></a>
+           <a href="#" class="social-link"><img src="img/links/behance.png" alt="behance"></a>
+           <a href="#" class="social-link"><img src="img/links/Group 10.png" alt="Group 10"></a>
        </div>
    </footer>
 </body>
